fix: 내 ì시설 예약 목록 불러오기 DTO, ㄴServiceImpl 수정